error debug while communicating with frontend